--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
         frameworkUrl: buildUrl + "/temp.framework.js",
         codeUrl: buildUrl + "/temp.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
+        companyName: "ameya",
         productName: "TubeRunner",
-        productVersion: "1.0",
+        productVersion: "1.1",
         showBanner: unityShowBanner,
       };
 
