--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         frameworkUrl: buildUrl + "/temp.framework.js",
         codeUrl: buildUrl + "/temp.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "ameya",
+        companyName: "Wega labs",
         productName: "TubeRunner",
         productVersion: "1.1",
         showBanner: unityShowBanner,
